syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message MMJJMKMHANL {
	uint32 dungeon_id = 1;
	uint32 CAKBFMNHDPM = 2;
}
